<resources>
    <string name="app_name" translatable="false">ChasR Map</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_map_live">Follow live on map</string>
    <string name="button_map_view">Show on map</string>
    <string name="button_map_delete">Delete device</string>
    <string name="button_start_date">Set start date</string>
    <string name="button_end_date">Set end date</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="error">Error</string>
    <string name="about_description">Simple map for logged location data of the end-to-end encrypted ChasR logging system.</string>
    <string name="about_description2">For more information and help please see the Github page https://github.com/sqall01/chasr-android-map or visit https://alertr.de/chasr</string>
    <string name="about_version">Version %s</string>
    <string name="about_privacy">Privacy Policy: https://alertr.de/legal.php</string>
    <string name="about_credits" translatable="false">2019 © Andre Pawlowski</string>
    <string name="label_device">Device</string>
    <string name="label_slots">Device Slots</string>
    <string name="label_mode">Mode</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="devices_stored_single">%d device stored on server</string>
    <string name="devices_stored_multi">%d devices stored on server</string>
    <string name="slots_left_single">%d slot left</string>
    <string name="slots_left_multi">%d slots left</string>
    <string name="map_mode_prompt">Choose a mode</string>
    <string name="device_prompt">Choose a device</string>
    <string name="pref_group_mandatory">Mandatory Settings</string>
    <string name="pref_group_optional">Optional Settings</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_summary">User login on ChasR server</string>
    <string name="pref_pass_title">Password</string>
    <string name="pref_pass_summary">User password on ChasR server</string>
    <string name="pref_secret_title">Secret</string>
    <string name="pref_secret_summary">Secret used to decrypt the GPS data</string>
    <string name="pref_host_title">ChasR Server</string>
    <string name="pref_host_summary">ChasR Server URL (change only if you host the server yourself)</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_units_summary">Preferred units for displaying distances</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_units_nautical">Nautical</string>
    <string name="provide_chasr_settings">Please provide user, password and secret</string>
    <string name="provide_valid_url">Please provide valid server url</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="go_settings_description">You have to configure the map app before it can show tracked devices. For this you need a ChasR account which can be freely registered at https://alertr.de/chasr</string>
    <string name="go_settings">Go to Settings</string>
    <string name="e_illegal_redirect">Illegal redirect: %d</string>
    <string name="e_http_code">HTTP error code: %d</string>
    <string name="e_database_error">Database error on server. Retry later.</string>
    <string name="e_auth_error">Authentication error. Are username and password correct?</string>
    <string name="e_illegal_msg_error">Illegal message format. Please contact support if error remains.</string>
    <string name="e_session_expired">Session expired. Please retry.</string>
    <string name="e_acl_error">Request not allowed.</string>
    <string name="e_unknown">Unknown error. Are you using the newest version of the app?</string>
    <string name="e_unknown_server">Unknown server response. Try again later.</string>
    <string name="e_start_end_date_wrong">Start date has to be before end date.</string>
    <string name="e_start_date_missing">Start date is not set.</string>
    <string name="e_end_date_missing">End date is not set.</string>
    <string name="loading">Loading &#8230;</string>
    <string name="delete_confirmation">Are you sure you want to delete device \"%s\"?</string>
    <string name="live_update">Update:</string>
    <string name="live_location">Location:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="view_start">Start at:</string>
    <string name="view_end">End at:</string>
    <string name="view_distance">Distance:</string>
    <string name="view_decrypting">Decrypting Position %d/%d</string>
    <string name="view_processing">Processing Positions</string>
    <string name="unit_nmile" translatable="false">nm</string>
    <string name="unit_kilometer" translatable="false">km</string>
    <string name="unit_mile" translatable="false">mi</string>

    <string-array name="map_mode">
        <item>Live</item>
        <item>View</item>
        <item>Delete</item>
    </string-array>
</resources>
